--- a/moped-database/metadata/tables.yaml
+++ b/moped-database/metadata/tables.yaml
@@ -1461,6 +1461,16 @@
       - fund_opp_name
       - date_added
       filter: {}
+  - role: moped-viewer
+    permission:
+      columns:
+      - fund_opp_id
+      - fund_opp_name
+      - project_id
+      - proj_fund_opp_id
+      - date_added
+      - added_by
+      filter: {}
   update_permissions:
   - role: moped-admin
     permission:
