--- a/moped-database/metadata/tables.yaml
+++ b/moped-database/metadata/tables.yaml
@@ -3018,6 +3018,15 @@
       - project_role_name
       - date_added
       filter: {}
+  - role: moped-viewer
+    permission:
+      columns:
+      - project_role_id
+      - project_role_name
+      - active_role
+      - role_order
+      - date_added
+      filter: {}
   update_permissions:
   - role: moped-admin
     permission:
