--- a/moped-database/docker-compose.yml
+++ b/moped-database/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     #   and access configuration (user, db, password) are all the same.
     #
     moped-pgsql:
-        image: postgres:12-alpine
+        image: postgis/postgis:12-master
         volumes:
             - moped-db-vol:/var/lib/postgresql/data
         expose:
