--- a/moped-database/metadata/tables.yaml
+++ b/moped-database/metadata/tables.yaml
@@ -3133,28 +3133,14 @@
       - date_added
       - is_coa_staff
       - status_id
-      backend_only: false
-  - role: moped-editor
-    permission:
-      check: {}
-      columns:
-      - staff_uuid
-      - first_name
-      - last_name
-      - title
-      - workgroup
-      - user_id
-      - workgroup_id
-      - cognito_user_id
-      - date_added
-      - is_coa_staff
-      - status_id
+      - email
       backend_only: false
   select_permissions:
   - role: moped-admin
     permission:
       columns:
       - is_coa_staff
+      - email
       - status_id
       - user_id
       - workgroup_id
@@ -3170,6 +3156,7 @@
     permission:
       columns:
       - is_coa_staff
+      - email
       - status_id
       - user_id
       - workgroup_id
@@ -3184,39 +3171,25 @@
   - role: moped-viewer
     permission:
       columns:
-      - staff_uuid
+      - is_coa_staff
+      - email
+      - status_id
+      - user_id
+      - workgroup_id
       - first_name
       - last_name
       - title
       - workgroup
-      - user_id
-      - workgroup_id
-      - cognito_user_id
       - date_added
-      - is_coa_staff
-      - status_id
+      - cognito_user_id
+      - staff_uuid
       filter: {}
   update_permissions:
   - role: moped-admin
     permission:
       columns:
       - is_coa_staff
-      - status_id
-      - user_id
-      - workgroup_id
-      - first_name
-      - last_name
-      - title
-      - workgroup
-      - date_added
-      - cognito_user_id
-      - staff_uuid
-      filter: {}
-      check: null
-  - role: moped-editor
-    permission:
-      columns:
-      - is_coa_staff
+      - email
       - status_id
       - user_id
       - workgroup_id
