add config and libraries

--- a/moped-editor/package.json
+++ b/moped-editor/package.json
@@ -5,7 +5,14 @@
   "version": "1.0.0",
   "private": false,
   "scripts": {
-    "start": "react-scripts start",
+    "start": "env-cmd -e local react-scripts start",
+    "start:local": "export HTTPS=true && react-scripts start",
+    "start:staging": "env-cmd -e staging npm run start:local",
+    "start:production": "env-cmd -e production npm run start:local",
+    "build": "env-cmd -e local npm run build:local",
+    "build:local": "GENERATE_SOURCEMAP=false react-scripts build && cp _redirects build && cp -r build moped && mv moped build",
+    "build:staging": "env-cmd -e staging npm run build:local",
+    "build:production": "env-cmd -e production npm run build:local",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -30,8 +37,10 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/styles": "^4.10.0",
+    "aws-amplify": "^3.3.4",
     "chart.js": "^2.9.3",
     "clsx": "^1.1.1",
+    "env-cmd": "^10.1.0",
     "formik": "^2.1.5",
     "history": "^5.0.0",
     "lodash": "^4.17.19",
