--- a/moped-editor/package.json
+++ b/moped-editor/package.json
@@ -89,6 +89,7 @@
   ],
   "devDependencies": {
     "@babel/runtime": "^7.5.5",
+    "@hookform/devtools": "^2.2.1",
     "axios-mock-adapter": "^1.17.0",
     "babel-plugin-import": "^1.13.0",
     "cross-env": "^5.2.0",
