--- a/moped-editor/package.json
+++ b/moped-editor/package.json
@@ -33,6 +33,7 @@
     "globalize": "^0.1.1",
     "graphql": "^15.3.0",
     "history": "^4.10.0",
+    "little-state-machine": "^3.1.2",
     "lodash": "^4.17.15",
     "material-table": "^1.69.1",
     "node-sass": "^4.13.1",
@@ -47,6 +48,7 @@
     "react-google-maps": "^9.4.5",
     "react-highlight": "^0.12.0",
     "react-hook-form": "^6.8.1",
+    "react-hooks-helper": "^1.6.0",
     "react-html-parser": "^2.0.2",
     "react-infinite-scroller": "^1.2.4",
     "react-loadable": "^5.5.0",
@@ -57,6 +59,7 @@
     "react-router-config": "^5.0.1",
     "react-router-dom": "^5.0.0",
     "react-scripts": "^3.3.1",
+    "react-step-wizard": "^5.3.5",
     "react-vis": "^1.11.7",
     "recharts": "^1.6.2",
     "redux": "^4.0.1",
