--- a/moped-editor/package.json
+++ b/moped-editor/package.json
@@ -32,7 +32,9 @@
     ]
   },
   "dependencies": {
+    "@apollo/client": "^3.2.5",
     "@apollo/react-hooks": "^4.0.0",
+    "@hookform/devtools": "^2.2.1",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
@@ -45,7 +47,7 @@
     "env-cmd": "^10.1.0",
     "formik": "^2.1.5",
     "history": "^5.0.0",
-    "lodash": "^4.17.19",
+    "lodash": "^4.17.20",
     "moment": "^2.27.0",
     "nprogress": "^0.2.0",
     "prop-types": "^15.7.2",
@@ -55,6 +57,7 @@
     "react-dom": "^16.13.1",
     "react-feather": "^2.0.8",
     "react-helmet": "^6.1.0",
+    "react-hook-form": "^6.11.1",
     "react-perfect-scrollbar": "^1.5.8",
     "react-router": "^6.0.0-beta.0",
     "react-router-dom": "^6.0.0-beta.0",
