--- a/moped-editor/package.json
+++ b/moped-editor/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "@apollo/react-hooks": "^4.0.0",
+    "@hookform/resolvers": "^1.0.1",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
