--- a/moped-editor/package.json
+++ b/moped-editor/package.json
@@ -1,7 +1,7 @@
 {
   "name": "atd-moped-editor",
   "author": "ATD Data & Technology Services",
-  "licence": "MIT",
+  "licence": "CC0 1.0 Universal",
   "version": "1.0.0",
   "homepage": "/moped",
   "private": false,
