--- a/moped-editor/package.json
+++ b/moped-editor/package.json
@@ -46,7 +46,8 @@
     "env-cmd": "^10.1.0",
     "formik": "^2.1.5",
     "history": "^5.0.0",
-    "lodash": "^4.17.20",
+    "lodash.foreach": "^4.5.0",
+    "lodash.toarray": "^4.4.0",
     "moment": "^2.27.0",
     "nprogress": "^0.2.0",
     "prop-types": "^15.7.2",
