update config vars for different build environments

--- a/moped-editor/.env-cmdrc
+++ b/moped-editor/.env-cmdrc
@@ -5,7 +5,10 @@
     "REACT_APP_AWS_COGNITO_APP_CLIENT_ID": "3u9n9373e37v603tbp25gs5fdc",
     "REACT_APP_HASURA_ENDPOINT": "http://localhost:8080/v1/graphql",
     "REACT_APP_API_ENDPOINT": "http://localhost:5000",
-    "REACT_APP_HASURA_ENV": "local"
+    "REACT_APP_HASURA_ENV": "local",
+    "REACT_APP_AWS_COGNITO_REDIRECT_SIGN_IN": "https://localhost:3000/moped/session/signin",
+    "REACT_APP_AWS_COGNITO_REDIRECT_SIGN_OUT": "https://localhost:3000/moped/session/signin",
+    "REACT_APP_AWS_COGNITO_DOMAIN": "atd-moped-staging.auth.us-east-1.amazoncognito.com"
   },
   "staging": {
     "REACT_APP_AWS_COGNITO_REGION": "us-east-1",
@@ -13,7 +16,10 @@
     "REACT_APP_AWS_COGNITO_APP_CLIENT_ID": "3u9n9373e37v603tbp25gs5fdc",
     "REACT_APP_HASURA_ENDPOINT": "https://moped-graphql-staging.austinmobility.io/v1/graphql",
     "REACT_APP_API_ENDPOINT": "https://moped-api-staging.austinmobility.io",
-    "REACT_APP_HASURA_ENV": "staging"
+    "REACT_APP_HASURA_ENV": "staging",
+    "REACT_APP_AWS_COGNITO_REDIRET_SIGN_IN": "https://moped.austinmobility.io/moped/session/signin",
+    "REACT_APP_AWS_COGNITO_REDIRECT_SIGN_OUT": "https://moped.austinmobility.io/moped/session/signin",
+    "REACT_APP_AWS_COGNITO_DOMAIN": "atd-moped-staging.auth.us-east-1.amazoncognito.com"
   },
   "production": {
     "REACT_APP_AWS_COGNITO_REGION": "us-east-1",
@@ -21,6 +27,9 @@
     "REACT_APP_AWS_COGNITO_APP_CLIENT_ID": "ins01e2a8d3vd8apvnd0jv10c",
     "REACT_APP_HASURA_ENDPOINT": "https://moped-graphql.austinmobility.io/v1/graphql",
     "REACT_APP_API_ENDPOINT": "https://moped-api.austinmobility.io",
-    "REACT_APP_HASURA_ENV": "production"
+    "REACT_APP_HASURA_ENV": "production",
+    "REACT_APP_AWS_COGNITO_REDIRECT_SIGN_IN": "https://mobility.austin.gov/moped/session/signin",
+    "REACT_APP_AWS_COGNITO_REDIRECT_SIGN_OUT": "https://mobility.austin.gov/moped/session/signin",
+    "REACT_APP_AWS_COGNITO_DOMAIN": "atd-moped-production.auth.us-east-1.amazoncognito.com"
   }
 }
